# ROMERIN_SIM

./: .gitignore  README.md  al.txt  test  test.cpp
Datalogs/: log_20250605_164840.txt  log_20250605_165057.txt  log_20250605_165356.txt  log_20250804_192843.txt  log_20250804_194644.txt  log_20250804_195357.txt  log_20250804_195516.txt  log_20250805_123735.txt
Documentos/: Calculo posiciones.xlsx  al.txt  log.txt
firmware-emulation/: README.md  __sdkconfig.defaults  platformio.ini
firmware-emulation/apolo_model/: romerin4legs_emulator.json
firmware-emulation/include/: RomerinMessage.h
firmware-emulation/romerin_body/: README.md  platformio.ini
firmware-emulation/romerin_emulator/: mainwindow.cpp  mainwindow.h  mainwindow.ui  moduleemulator.cpp
firmware-emulation/romerin_interface/: apoloconection.cpp  apoloconection.h  btport.h  configdlg.cpp  configdlg.ui  emulationwnd.cpp  emulationwnd.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  modulecontroller.h  moduleshandler.cpp  moduleshandler.h  motorwidget.cpp  motorwidget.h  motorwidget.ui  romerinmodel.cpp  romerinmodule.h  romerinmodule.ui
firmware-emulation/shared/: apoloMessage.cpp  (+1 more)
firmware-emulation_merging/test/: CMakeLists.txt  rom_kin.m  sim_kin.m  test_rom_kin.cpp
firmware-master_updated/: .gitignore  README.md  platformio.ini
movimientos/: CMakeLists.txt  Modulo.h  Trayectoria.cpp  modulo.h  movimientos.cpp  romerinmodule.cpp
movimientos/Movimientos/: MTHomogenea.cpp  MTHomogenea.h  Movimientos.pro  configdlg.cpp  configdlg.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  module.cpp  module.h  module.ui  modulecontroller.cpp  modulecontroller.h  moduleshandler.cpp  moduleshandler.h  motor.cpp  motor.h  motor.ui  point_3d.cpp  point_3d.h  trayectorygenerator.cpp  trayectorygenerator.h
movimientos/Movimientos/components/: utils.h
movimientos/include/: RomMotorInfoA.h  RomerinMessage.h
movimientos/shared/: romkin.cpp  romkin.h
mujoco-3.2.3-linux-x86_64/: CMakeLists.txt  FRIGG.xml  GenPatas.py  LOKI.xml  ODIN.xml  THOR.xml  cuerpo.xml  link.xml  modelo.xml
mujoco-3.2.3-linux-x86_64/example/leg/: link.xml  motor_ex.xml
mujoco-3.2.3-linux-x86_64/example/robot/: FRIGG.xml  LOKI.xml  ODIN.xml  THOR.xml  link.xml  stand.xml
mujoco-3.2.3-linux-x86_64/example/sensor/: range_finder.xml  torque.xml  touch.xml
mujoco-3.2.3-linux-x86_64/include/Comunicacion/: RomerinMessage.h
mujoco-3.2.3-linux-x86_64/include/Control/: ControlPatas.h
mujoco-3.2.3-linux-x86_64/include/Cuerpo/: Cuerpo.xml  cuerpo.xml
mujoco-3.2.3-linux-x86_64/include/Cuerpo/meshes/: body1CGEnv.stl  body1CGSimple.dae  body1CGSimple.stl  body2CGEnv.stl  body2CGSimple.dae  body2CGSimple.stl  body3CGSimple.dae  body3CGSimple.stl
mujoco-3.2.3-linux-x86_64/include/Kinematics/: romkin.h
mujoco-3.2.3-linux-x86_64/include/Module/: modulesimulator.h
mujoco-3.2.3-linux-x86_64/include/Pata/: FRIGG.xml  GenPatas.py  LOKI.xml  ODIN.xml  Pata.xml  PatasGen.py  THOR.xml  link.xml
mujoco-3.2.3-linux-x86_64/include/Pata/Old/: Ventosa.xml  succionador.xml
mujoco-3.2.3-linux-x86_64/include/Pata/meshes/: link1CGSimple.dae  link2CGEnv.stl  link2CGSimple.stl  link3CGSimple.stl  link4CGEnv.stl  link4CGSimple.dae  link4CGSimple.stl  link5CGSimple.dae  link5CGSimple.stl  link6CGSimple.stl  link7CGEnv2.stl  link7CGSimple.stl  suctionCupCGEnv.stl  suctionCupCGEnvSimple.stl  suctionCupCGSimple.dae  suctionCupCGSimple.stl
mujoco-3.2.3-linux-x86_64/include/Pata/suctionCupSimple/: model.xml
mujoco-3.2.3-linux-x86_64/include/Posicion/: Posicion.h
mujoco-3.2.3-linux-x86_64/include/Robot/: Robot.h  Robot.xml  modelo.xml  obstacle.xml
mujoco-3.2.3-linux-x86_64/include/RomJoints/: ROMERIN_config.json  RomJointsA.h  RomerinDefinitionsA.h  RomerinMsgA.h  modificaciones
mujoco-3.2.3-linux-x86_64/include/romerinSimple_v2/: model.config  model.sdf
mujoco-3.2.3-linux-x86_64/include/romerinSimple_v2/meshes/: link1CGEnv.stl  link1CGSimple.stl  link2CGSimple.dae  link3CGEnv.stl  link3CGSimple.dae  link5CGEnv.stl  link6CGEnv.stl  link6CGSimple.dae  link7CGEnv.stl  link7CGSimple.dae
mujoco-3.2.3-linux-x86_64/src/Robot/BrazoRobot/: Robot.cpp
mujoco-3.2.3-linux-x86_64/src/Robot/Control/: controlPatas.cpp
mujoco-3.2.3-linux-x86_64/src/Robot/Kinematics/: romkin.cpp
mujoco-3.2.3-linux-x86_64/src/Robot/RomJoints/: RomJointsA.cpp  RomerinMsgA.cpp  modulesimulator.cpp
test_space/: DH  DH copy.cpp  DH.cpp  DH_test_II  DH_test_III  colocacion_motor.cpp  datos.txt  matrix.cpp  matrixV2.cpp  matrixV3.cpp  matriz1  matriz2  matriz3  matriz4  matriz5  motorcol  test  test.cpp  test_II  test_III  test_IV  test_V
(+116 files in other folders)
